--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@headlessui/react": "^1.7.4",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
@@ -15,6 +17,7 @@
     "@types/react-dom": "^18.0.4",
     "framer-motion": "^6.2.9",
     "react": "^18.1.0",
+    "react-cssfx-loading": "^2.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
     "react-scripts": "5.0.1",
